fixes button spacing on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,11 +108,14 @@ button {
   padding: 15px 30px;
   text-transform: uppercase; }
 
-button:hover {
-  background-color: #000;
-  border: 2px solid #000;
-  color: white; }
-
+@media (min-width: 700px) {
+  button:hover {
+    background-color: #000;
+    border: 2px solid #000;
+    color: white; } }
+@media (max-width: 700px) {
+  button {
+    padding: 10px 15px; } }
 body {
   background-color: black;
   text-align: center; }
@@ -127,6 +130,7 @@ body {
   @media (max-width: 700px) {
     .content {
       margin: 0;
+      padding: 50px 5px;
       width: 100%; } }
 
 h1 {
