--- a/public/css/sass/base/_buttons.scss
+++ b/public/css/sass/base/_buttons.scss
@@ -12,8 +12,20 @@ button {
     text-transform: uppercase;
 }
 
-button:hover {
-    background-color: #000;
-    border: 2px solid #000;
-    color: white;
+@media (min-width: 700px) {
+
+    button:hover {
+        background-color: #000;
+        border: 2px solid #000;
+        color: white;
+    }
+
+}
+
+@media (max-width: 700px) {
+
+    button {
+        padding: 10px 15px;
+    }
+
 }
