--- a/public/css/sass/views/_home.scss
+++ b/public/css/sass/views/_home.scss
@@ -13,6 +13,7 @@ body {
 
     @media (max-width: 700px) {
         margin: 0;
+        padding: 50px 5px;
         width: 100%;
     }
 }
